# open-medical-skills

./: .env.example  .gitignore  .mcp.json  2026-03-25-handoff.md  2026-03-28-handoff.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  INTEGRATION-PROMPT.md  LICENSE  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: submit-plugin.yml  submit-skill.yml
.github/PULL_REQUEST_TEMPLATE/: dev-to-main.md  skill-submission.md
.github/workflows/: branch-guard.yml  ci.yml  compliance-gate.yml  deploy-api.yml  deploy-mcp.yml  deploy.yml  sync-index.yml  validate-submission.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
api/: README.md  package-lock.json  package.json  setup.sh  wrangler.toml
api/src/: index.ts
cli/: README.md  package-lock.json  package.json
content/: CONTENT_SUMMARY.md
docs/: CATEGORY-GUIDE.md  CONTRIBUTING.md  SKILL-FORMAT.md
mcp/: README.md  package-lock.json  package.json  wrangler.toml
oms-models/: README.md
plugins/aws-healthlake-fhir/: CREDITS.md  PLUGIN.md  README.md  pyproject.toml
plugins/aws-healthlake-fhir/src/awslabs/: __init__.py
plugins/aws-healthlake-fhir/src/awslabs/healthlake_mcp_server/: __init__.py
scripts/: bulk-dedup-report.py  check-index-freshness.sh  dedup-check.js  embed-oms-skills.py  extract_and_push.py  generate-skill-dirs.py  generate-sql-seed.js  secrets-manifest.json  secrets-sync.sh  sync-to-public.sh
src/: content.config.ts
(+965 files in other folders)
