[project]
name = "awslabs.healthlake-mcp-server"
version = "0.0.10"
description = "An AWS Labs Model Context Protocol (MCP) server for HealthLake FHIR operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "mcp>=1.23.0",
    "pydantic>=2.10.6",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
]
license = {text = "Apache-2.0"}
authors = [
    {name = "Amazon Web Services"},
    {name = "AWSLabs MCP", email="203918161+awslabs-mcp@users.noreply.github.com"},
]

[project.scripts]
"awslabs.healthlake-mcp-server" = "awslabs.healthlake_mcp_server.main:sync_main"

[project.urls]
homepage = "https://awslabs.github.io/mcp/"
repository = "https://github.com/awslabs/mcp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
